<resources>
    <string name="app_name">school app</string>
    <string name="enter">Enter</string>
    <string name="barcode">Barcode</string>
    <string name="name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="single_20">Single: 0</string>
    <string name="cartons_20">Cartons: 0</string>
    <string name="done">Done</string>
    <string name="add_image">Add Image</string>
    <string name="flash">flash</string>
    <string name="headerShadow">headerShadow</string>


    <string name="store">Store</string>
    <string name="scan">Scan</string>
    <string name="mealScanner">meal scanner</string>
    <string name="add">Add</string>
    <string name="type">Type:</string>

    <!-- signInUp -->
    <string name="userName">Name</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">sign In</string>
    <string name="sign_up_activity">create email</string>
    <string name="sign_up">sign up</string>
    <string name="profile">profile</string>
    <!-- signInUp -->

    <!-- profile -->
    <string name="log_out">log out</string>
    <string name="money_you_have">money you have</string>
    <string name="money_picture">moneyPicture</string>
    <string name="test_email">test@test.com</string>
    <string name="your_email">your email</string>
    <string name="user_name">user name</string>
    <string name="profile_image">profile_image</string>
    <string name="overlay">overLay</string>
    <string name="bgProfile_image">bgProfile_image</string>
    <!-- end profile-->

    <string name="workers_profile">workers_profile</string>
    <string name="email">email</string>
    <string name="backbutton">backButton</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="add_product">add Product</string>
    <string name="scanned_history">scanned history</string>
    <string name="card_image">card image</string>
    <string name="loading">loading...</string>


</resources>
