<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.uiCards.MealScannerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/custum_action_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"

                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/ic_action_name"
                    android:contentDescription="@string/backbutton"
                    android:foreground="?attr/selectableItemBackgroundBorderless" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginBottom="-1dp"
                    android:gravity="center_vertical"
                    android:text="@string/mealScanner"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#2D3BFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />

        </LinearLayout>

        <ListView
                android:id="@+id/lv_mealList"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_scanMeal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/custum_action_bar">

        </ListView>

        <Button
            android:id="@+id/btn_scanMeal"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/scan"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>