<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:id="@+id/lo_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:cardCornerRadius="50dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/iv_profileRegister"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/account" />

                            <TextView
                                android:id="@+id/tv_editImage"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_alignBottom="@+id/iv_profileRegister"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentEnd="true"
                                android:background="#6D0E0000"
                                android:text="@string/add_image"
                                android:textAlignment="center"
                                android:textColor="#FFFEFE"
                                android:textSize="18sp" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/userName"
                        android:textColorHint="@color/offWhite"
                        app:hintAnimationEnabled="true">

                        <EditText
                            android:id="@+id/et_parentNameRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:textSize="24sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/offWhite"
                        app:hintAnimationEnabled="false">

                        <EditText
                            android:id="@+id/et_parentEmailRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/userEmail"
                            android:inputType="textEmailAddress"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:textSize="24sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/offWhite"
                        app:hintAnimationEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/et_parentpasswordRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/userPassword"
                            android:inputType="textPassword"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:textSize="24sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/offWhite"
                        app:hintAnimationEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/et_parentpasswordRegister2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:paddingTop="20dp"
                            android:paddingBottom="20dp"
                            android:textSize="24sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/btn_signUpRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/sign_up"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lo_progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CD000000"
        android:elevation="11dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>
